# explore-dj-unicorn

./: .gitignore  README.md  pyproject.toml
app/: requirements.txt
app/app/: settings.py  urls.py
app/mealplan/: admin.py  apps.py  models.py  urls.py  views.py
app/mealplan/components/: nav.py  tabs.py
app/mealplan/migrations/: 0001_initial.py
app/mealplan/templates/: base.html
app/mealplan/templates/mealplan/: base.html  meal_list.html  meals.html
app/mealplan/templates/unicorn/: nav.html  tabs.html
app/theme/static_src/: package-lock.json
