[project]
name = "explore-dj-unicorn"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "Mario Munoz", email = "pythonbynight@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
    "django-unicorn>=0.60.0",
    "django-tailwind[reload]>=3.8.0",
    "pip>=24.1.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
